implement appointment endpoints and role-based access control